# ChangeLog for app-office/mozilla-sunbird
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/mozilla-sunbird/Attic/ChangeLog,v 1.40 2008/11/27 09:49:58 armin76 Exp $

  27 Nov 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-sunbird-0.8.ebuild, mozilla-sunbird-0.9.ebuild:
  Add missing it langpack, bug #248341

  22 Nov 2008; Thomas Anderson <gentoofan23@gentoo.org>
  mozilla-sunbird-0.9.ebuild:
  stable amd64, bug 247802

  20 Nov 2008; Raúl Porcel <armin76@gentoo.org> mozilla-sunbird-0.9.ebuild:
  x86 stable

*mozilla-sunbird-0.9 (19 Oct 2008)

  19 Oct 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-sunbird-0.9_rc2.ebuild, +mozilla-sunbird-0.9.ebuild:
  Version bump

*mozilla-sunbird-0.9_rc2 (20 Sep 2008)

  20 Sep 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-sunbird-0.9_rc2.ebuild:
  Version bump

  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  18 Jul 2008; Alexis Ballier <aballier@gentoo.org>
  mozilla-sunbird-0.8.ebuild:
  keyword ~x86-fbsd thanks to Nathan Smith <nathan@ndansmith.net>, bug
  #190810

  27 May 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-sunbird-0.7.ebuild:
  old

  23 May 2008; Markus Meier <maekke@gentoo.org> mozilla-sunbird-0.8.ebuild:
  amd64 stable, bug #223045

  21 May 2008; Raúl Porcel <armin76@gentoo.org> mozilla-sunbird-0.8.ebuild:
  x86 stable

  19 Apr 2008; Raúl Porcel <armin76@gentoo.org> mozilla-sunbird-0.7.ebuild,
  mozilla-sunbird-0.8.ebuild:
  Fix pango check, bug #218438

  19 Apr 2008; Raúl Porcel <armin76@gentoo.org> mozilla-sunbird-0.7.ebuild,
  mozilla-sunbird-0.8.ebuild:
  We need pango built with X use-flag bug #216377, fix linguas, bug #218147

*mozilla-sunbird-0.8 (08 Apr 2008)

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-sunbird-0.8.ebuild:
  Version bump

  17 Mar 2008; Raúl Porcel <armin76@gentoo.org> mozilla-sunbird-0.7.ebuild: