@@ -1,12 +1,12 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/Attic/seamonkey-1.1.14.ebuild,v 1.6 2008/12/22 15:33:35 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/Attic/seamonkey-1.1.14.ebuild,v 1.7 2009/02/15 19:00:07 armin76 Exp $
 
 WANT_AUTOCONF="2.1"
 
 inherit flag-o-matic toolchain-funcs eutils mozcoreconf mozconfig-2 mozilla-launcher makeedit multilib autotools
 
-PATCH="${PN}-1.1.12-patches-0.1"
+PATCH="${P}-patches-0.1"
 EMVER="0.95.7"
 
 DESCRIPTION="Mozilla Application Suite - web browser, email, HTML editor, IRC"
