@@ -1,6 +1,9 @@
 # ChangeLog for app-office/mozilla-sunbird
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/mozilla-sunbird/Attic/ChangeLog,v 1.40 2008/11/27 09:49:58 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-office/mozilla-sunbird/Attic/ChangeLog,v 1.41 2009/02/15 19:01:44 armin76 Exp $
+
+  15 Feb 2009; Raúl Porcel <armin76@gentoo.org> mozilla-sunbird-0.9.ebuild:
+  Bump patchset to fix failure with gcc-4.3, bug #258075
 
   27 Nov 2008; Raúl Porcel <armin76@gentoo.org>
   -mozilla-sunbird-0.8.ebuild, mozilla-sunbird-0.9.ebuild:
